syntax = "proto3";

package video;

service VideoService {
    rpc UploadVideo (UploadVideoRequest) returns (VideoResponse);
    rpc GetVideoByID (GetVideoRequest) returns (VideoResponse);
    rpc UpdateVideo (UpdateVideoRequest) returns (VideoResponse);
    rpc DeleteVideo (DeleteVideoRequest) returns (Empty);
    rpc ListVideos (ListVideosRequest) returns (ListVideosResponse);
    rpc VideoCheck (Empty) returns (Check);
}

message UploadVideoRequest {
    string title = 1;
    string description = 2;
    string genre = 3;
}

message GetVideoRequest {
    string uuid = 1;
}

message UpdateVideoRequest {
    string uuid = 1;
    string title = 2;
    string description = 3;
    string genre = 4;
}

message DeleteVideoRequest {
    string uuid = 1;
}

message ListVideosRequest {
    string title = 1;
    string genre = 2;
}

message Video {
  string uuid = 1;
  string title = 2;
  string description = 3;
  int32 likes = 4;
  string genre = 5;
  bool deleted = 6;
}

message ListVideosResponse {
  repeated Video videos = 1;
}

message VideoResponse {
  Video video = 1;
}

message Empty {}

message Check {
  string message = 1;
}
